# MIMe

./: .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.leaf  LICENSE  Makefile  README.md  docker-compose.yml
attention/model/mimeAttn.ckpt/variables/: variables.index
attention/model/mimeAttnCOS.ckpt/: saved_model.pb
attention/model/mimeAttnMAEMSE.ckpt/variables/: variables.index
brain/attention/model/mimeAttnMAEMSE.ckpt/: saved_model.pb
brain/signals/: knot.py
datasets/: .gitignore  datadingsItr.py
datasets/saliency/: .gitignore  datadings.srcs
emotion/: emotionData.hpp
eye/: eye.cpp  eye.hpp  eyedemo.py
face/: eye.cpp  eye.hpp  maskOccupancy.csv  maskenc.go
perception/: build-tvm.sh  calibcorners1.npz  cam0.npz  cam0.npz.old  cam1.npz  cam1.npz.old  camcalib.py  camcorner.py  captest.py  capvid.py  dockerrun.py  init.sh  pipeline.py
perception/camera/: __init__.py  capture.py
perception/fakedepth/: __init__.py  interop.py
perception/fastdepth/: __init__.py  fastdepth1-dla0.onnx.trt  fastdepth1-dla1.onnx.trt  fastdepth1.onnx.trt  fastdepth2-dla0.onnx.trt  fastdepth2-dla1.onnx.trt  fastdepth2.onnx.trt  fastdepth4.onnx.trt  interop.py  main.py
perception/opticalflow/: interop.py
perception/resources/: tvm.cmake
perception/syscamera/: __init__.py  calibcorners0.npz  cam0.npz  capture.py  config.py
perception/vpiinterop/: .gitignore  CMakeLists.txt  __init__.py  denseFlow.cpp  interop.py  layers.cpp  setup.py  syscamera
scripts/: refgen.py
self/brain/: __init__.py  knot.py
terminal/: init.sh
(+5 files in other folders)
